Add general analysis removed from garbagecat.